[package]
name = "cloudflare"
version = "0.1.0"
edition = "2021"

[dependencies]
scc = "3.6.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
worker = "0.7.5"
worker-macros = "0.7.5"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "worker"
path = "src/index.rs"
